--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -2,11 +2,11 @@
 <!-- Start Footer Section -->
 <footer class="footer-section">
     <div class="container relative">
-        <div class="row g-5 align-items-start mb-5">
+        <div class="row g-5 align-items-start mb-5" style="max-width: 100%;">
             <div class="col-lg-6">
                 <h5 class="text-uppercase fw-bold text-danger">Module Furniture & Interiors</h5>
                 <p><strong>Timing :</strong> Mon - Sun 9:30 AM to 8:30 PM</p>
-                <p><strong>Contact :<a href="tel:+918129718086">+91 8129718086</a></strong></p>
+                <p><strong>Contact :<a href="tel:+918129718086">+91 8590908628</a></strong></p>
 
                 <p><strong>Address</strong><br>
                     MANAKKAPADY, IRUMPANAM <br>
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="row g-5 mb-5">
+        <div class="row g-5 mb-5" style="max-width: 100%;">
             <div class="col-lg-4">
                 <div class="mb-4 footer-logo-wrap"><a href="home2" class="footer-logo">Module
                         <span>Furnitures</span></a></div>
