--- a/furniture/furni/templates/furni/checkout.html
+++ b/furniture/furni/templates/furni/checkout.html
@@ -558,7 +558,7 @@ document.addEventListener('DOMContentLoaded', function (){
       order_id: data.razorpay_order_id, 
       callback_url: data.callback_url,
 	  order_no: data.orderno,
-	  cartcreated :cartcreated,
+	  newcartcreated :cartcreated,
 	  prefill : {
 		name : data.name,
 		email : data.email,
