--- a/furniture/furni/templates/furni/checkout.html
+++ b/furniture/furni/templates/furni/checkout.html
@@ -532,7 +532,7 @@ document.addEventListener('DOMContentLoaded', function (){
 	const loader = document.getElementById("payment-loader");
 	const form =  document.getElementById("checkout-form");
 	if (page == "cart_checkout") {
-		url = `/createorder/?page=${page}&cartcreated=${cartcreated}` 
+		url = `/createorder/?page=${page}&newcartcreated=${cartcreated}` 
 	} else if (page == "buy_checkout") {
 		url = `/createorder/?page=${page}&product=${product}&quantity=${qty}&total_product_cost=${total_product_cost}`
 	}
@@ -557,7 +557,10 @@ document.addEventListener('DOMContentLoaded', function (){
       name: "Module Furnitures", 
       order_id: data.razorpay_order_id, 
       callback_url: data.callback_url,
-	  order_no: data.orderno,
+	  notes: {
+		newcartcreated: data.cartcreated,
+		order_no: data.orderno
+      },
 	  prefill : {
 		name : data.name,
 		email : data.email,
