--- a/furniture/templates/navbar.html
+++ b/furniture/templates/navbar.html
@@ -18,6 +18,7 @@
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
+  <meta name="robots" content="noindex, nofollow">
 
 		<!-- Bootstrap CSS -->
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
