--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -1,5 +1,6 @@
 {% load static %}
 <!-- Start Footer Section -->
+ 
 <footer class="footer-section">
     <div class="container relative">
         <div class="row g-5 align-items-start mb-5" style="max-width: 100%;">
@@ -181,3 +182,5 @@ document.addEventListener("DOMContentLoaded", function () {
     });
 });
 </script>
+</body>
+</html>
