--- a/furniture/furni/templates/furni/category.html
+++ b/furniture/furni/templates/furni/category.html
@@ -1,8 +1,8 @@
 {% extends 'main.html' %}
 {% load humanize %}
+{% block title %}{{present_room}} | Module Furnitures{% endblock %}
 {% block content %}
 <!-- Category Tabs -->
- 
 
 
   {% if products %}
