--- a/furniture/furni/templates/furni/checkout.html
+++ b/furniture/furni/templates/furni/checkout.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %}
 {% load humanize %}
+{% block title %}Checkout | Module Furnitures{% endblock %}
 {% block content %}
 {% load static %}
 <script src="https://unpkg.com/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.js"></script>
