--- a/furniture/furni/templates/furni/leaders.html
+++ b/furniture/furni/templates/furni/leaders.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% block title %}Leadership | Module Furnitures{% endblock %}
 {% block content %}
 {% load static %}
 <!-- Start Hero Section -->
