--- a/furniture/furni/templates/furni/blogs.html
+++ b/furniture/furni/templates/furni/blogs.html
@@ -1,19 +1,27 @@
 
 {% extends 'main.html' %}
+{% block title %}Blogs | Module Furnitures{% endblock %}
 {% block content %}
 {% load static %}
-<div class="blog-section">
+<div class="blog-section" style="padding-top: 5px ;">
+	<div class="container py-4">
+  <div class="breadcrumbs">
+  <ul class="breadcrumb">
+  <li><a href="{% url 'home' %}">Home</a></li>
+  <li><a href="{{request.path}}">Blogs</a></li>
+</ul>
+</div>
 			<div class="container">
 				
 				<div class="row">
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">First Time Home Owner Ideas</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">First Time Home Owner Ideas</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Kristin Watson</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 19, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -21,11 +29,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">How To Keep Your Furniture Clean</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Robert Fox</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 15, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -33,11 +41,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">Small Space Furniture Apartment Ideas</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Kristin Watson</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 12, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -45,11 +53,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">First Time Home Owner Ideas</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">First Time Home Owner Ideas</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Kristin Watson</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 19, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -57,11 +65,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">How To Keep Your Furniture Clean</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Robert Fox</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 15, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -69,11 +77,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">Small Space Furniture Apartment Ideas</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Kristin Watson</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 12, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -81,11 +89,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">First Time Home Owner Ideas</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">First Time Home Owner Ideas</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Kristin Watson</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 19, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -93,11 +101,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">How To Keep Your Furniture Clean</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Robert Fox</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 15, 2021</a></span>
 								</div>
 							</div>
 						</div>
@@ -105,11 +113,11 @@
 
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
+							<a href="{% url 'indiv_blogs' %}" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 							<div class="post-content-entry">
-								<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
+								<h3><a href="{% url 'indiv_blogs' %}">Small Space Furniture Apartment Ideas</a></h3>
 								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
+									<span>by <a href="{% url 'indiv_blogs' %}">Kristin Watson</a></span> <span>on <a href="{% url 'indiv_blogs' %}">Dec 12, 2021</a></span>
 								</div>
 							</div>
 						</div>
