--- a/furniture/furni/templates/furni/orders.html
+++ b/furniture/furni/templates/furni/orders.html
@@ -1,12 +1,19 @@
 
 
 {% extends 'main.html' %}
+{% block title %}Your Orders | Module Furnitures{% endblock %}
 {% block content %}
 {% load static %}
 {% load dict_extras %}
 
 {% if orders %}
 <div class="container my-4">
+  <div class="breadcrumbs">
+  <ul class="breadcrumb">
+  <li><a href="{% url 'home' %}">Home</a></li>
+  <li><a href="{{request.path}}">Your Orders</a></li>
+</ul>
+</div>
   <h3 class="mb-3">Your Orders</h3>
   </div> 
 {% for order in orders %}
@@ -98,6 +105,12 @@
 {% endfor %}
 {% else %}
 <div class="container my-4">
+   <div class="breadcrumbs">
+  <ul class="breadcrumb">
+  <li><a href="{% url 'home' %}">Home</a></li>
+  <li><a href="{{request.path}}">Your Orders</a></li>
+</ul>
+</div>
   <h3 class="mb-3">Nothing here yet—start shopping!</h3>
   <a href="{% url 'shop' %}" class="btn btn-outline-dark btn-sm">Shop Now</a>
   </div> 
