--- a/furniture/furni/templates/furni/purchase-returns.html
+++ b/furniture/furni/templates/furni/purchase-returns.html
@@ -1,9 +1,16 @@
 {% extends 'main.html' %}
+{% block title %}Purchase Returns | Module Furnitures{% endblock %}
 {% block content %}
 {% load static %}
 
 <section class="py-5 bg-light" style="margin-top: 10px;">
   <div class="container">
+    <div class="breadcrumbs">
+  <ul class="breadcrumb">
+  <li><a href="{% url 'home' %}">Home</a></li>
+  <li><a href="{{request.path}}">Purchase and Returns</a></li>
+</ul>
+</div>
     <h2 class="mb-4 text-primary fw-bold text-center">Purchase & Returns Policy</h2>
 
     <p class="text-muted mb-4 text-center">
