--- a/furniture/furni/templates/furni/return.html
+++ b/furniture/furni/templates/furni/return.html
@@ -1,5 +1,6 @@
   
 {% extends 'main.html' %}
+{% block title %}Returns | Module Furnitures{% endblock %}
 {% block content %}
 {% load humanize %}
 <div class="container my-4">
