--- a/furniture/furni/templates/furni/shipping-delivery.html
+++ b/furniture/furni/templates/furni/shipping-delivery.html
@@ -1,9 +1,15 @@
 {% extends 'main.html' %}
+{% block title %}Shipping and Delivery | Module Furnitures{% endblock %}
 {% block content %}
 {% load static %}
 <section class="py-5" id="faqs">
   <div class="container">
-    <div class="container">
+    <div class="breadcrumbs">
+  <ul class="breadcrumb">
+  <li><a href="{% url 'home' %}">Home</a></li>
+  <li><a href="{{request.path}}">Shipping and Delivery</a></li>
+</ul>
+</div>
     <h2 class="mb-4 text-primary fw-bold text-center">
       Shipping and Delivery
     </h2>
