--- a/furniture/furni/templates/furni/thankyou.html
+++ b/furniture/furni/templates/furni/thankyou.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% block title %}Order Confirmation | Module Furnitures{% endblock %}
 {% block content %}
 		<!-- Start Hero Section -->
 			<div class="hero">
