--- a/furniture/furni/templates/furni/view_order.html
+++ b/furniture/furni/templates/furni/view_order.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% block title %}Your Orders | Module Furnitures{% endblock %}
 {% block content %}
 {% load humanize %}
 
