robot crawl off

--- a/furniture/templates/main.html
+++ b/furniture/templates/main.html
@@ -11,6 +11,7 @@
 
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
+    <meta name="robots" content="noindex, nofollow">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Premium Furniture for Modern Living | Module Furnitures" />
